--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,13 +18,6 @@ ru:
       competitions: "Соревнования"
     footer:
       owner: 'Александр Кунин, Александр Разорёнов, BWS'
-  track_select:
-    track_select:
-      title: 'Выберите трек для загрузки'
-      number: 'Номер'
-      name: 'Имя трека'
-      elev: 'Перепад высот'
-      pt_cnt: 'Количество точек'
   tracks:
     index:
       title: 'Загруженные треки:'
@@ -70,6 +63,18 @@ ru:
       units_header: 'Единицы измерения:'
       m_units_metric: 'Метрические (м, км/ч)'
       m_units_imperial: 'Имперские (футы, мили/ч)'
+      delete_confirmation: "Вы уверены, что хотите удалить этот трек?"
+      delete: "Удалить"
+      manage: "Редактирование"
+    select:
+      title: 'Выберите трек для загрузки'
+      number: 'Номер'
+      name: 'Имя трека'
+      elev: 'Перепад высот'
+      pt_cnt: 'Количество точек'
+    upload_error:
+      header: "Ошибка при чтении файла"
+      text: "Пожалуйста, отправьте загружаемый файл по адресу ab@ipkunin.ru, указав каким устройством он был записан. После реализации поддержки данного формата я напишу Вам."
   static_pages:
     index:
       title: 'Летай! Соревнуйся! Побеждай!'
@@ -96,6 +101,7 @@ ru:
           file_ext_w2_html: "'Пожалуйтса, выберите файл с расширением csv или gpx'"
           file_size_w1_html: "'Размер файла : '"
           file_size_w2_html: "'Размер файла не должен превышать 1 Мб'"
+        kind: "Вид прыжка:"
       or: 'Или'
       events:
         title: 'Посоревноваться:'
