--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,6 +18,7 @@ ru:
       competitions: "Соревнования"
     footer:
       owner: 'Александр Кунин'
+      fb_page: "Страница приложения в facebook"
   tracks:
     index:
       title: 'Загруженные треки:'
@@ -125,6 +126,8 @@ ru:
           reg_start_at: "Регистрация:"
           reg_end_at: "-"
         completed: "Прошедшие события:"
+      desc: "Анализ GPS треков и проведение соревнований в формате GPS Performance."
+      goto_event: "На страницу события >>"
     about:
       comp_t: 'Используемые компоненты:'
       comp_lng: 'Используемый фреймворк:'
@@ -150,6 +153,8 @@ ru:
         approved: "Заявка подтверждена"
         declined: "Заявка отклонена"
         title: "Заявка на участие"
+        pending: "Не обработанные заявки"
+        completed: "Обработанные заявки"
       reg:
         not_starts: "Регистрация еще не началась"
         finished: "Регистрация завершена"
@@ -159,3 +164,28 @@ ru:
       dz_info: "Информация об аэродроме"
       competitors: "Участники"
       managing: "Управление"
+      class_comp: "Класс / Участник"
+      pfs: "Заявки"
+      rounds: "Раунды"
+      orgs: "Организаторы"
+  pf:
+    jumps: "Прыжков всего/за 12 мес./за 3 мес.:"
+    ws_jumps: "В вингсьюте всего/за 12 мес./за 3 мес.:"
+    ws_class: "Вингсьют/Класс:"
+    home_dz: "Домашняя ДЗ:"
+    height_weight: "Рост/Вес:"
+    shirt_size: "Размер футболки:"
+    phone: "Контактный телефон:"
+    email: "Контактный email:"
+    fb: "Профиль Facebook:"
+    vk: "Профиль ВКонтакте:"
+    additional_info: "Дополнительная информация:"
+    approve: "Подтвердить"
+    decline: "Отклонить"
+  rounds:
+    new: "Добавление раунда"
+    name: "Название раунда:"
+    discipline: "Дисциплина:"
+  general:
+    cancel: "Отмена"
+    create: "Добавить"
