--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -100,7 +100,7 @@ ru:
           loc_html: "'Вы не указали где Вы летали.'"
           file_html: "'Вы не выбрали файл.'"
           file_ext_w1_html: "'Расширение файла : '"
-          file_ext_w2_html: "'Пожалуйтса, выберите файл с расширением csv или gpx'"
+          file_ext_w2_html: "'Пожалуйтса, выберите файл с расширением csv, tes или gpx'"
           file_size_w1_html: "'Размер файла : '"
           file_size_w2_html: "'Размер файла не должен превышать 1 Мб'"
         kind: "Вид прыжка:"
