--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,7 +18,7 @@ en:
       competitions: "GPS Performance"
     footer:
       owner: 'Aleksandr Kunin'
-      fb_page: "Application's facebook page"
+      fb_page: "Application's page"
   track_select:
 
   tracks:
