--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -18,7 +18,7 @@ ru:
       competitions: "Соревнования"
     footer:
       owner: 'Александр Кунин'
-      fb_page: "Страница приложения в facebook"
+      fb_page: "Страница приложения"
   tracks:
     index:
       title: 'Загруженные треки:'
