Добавлены файлы, доработан хелпер

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -3,7 +3,7 @@ de:
     header:
       home: 'SKY DERBY'
       tracks: 'Trackliste'
-      about: 'über uns'
+      about: 'Über uns'
       sign_in: 'Einloggen'
       sign_up: 'Registrieren'
       sign_out: 'Ausloggen'
