Исправлен перевод "О проекте"

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@ en:
     header:
       home: 'SKY DERBY'
       tracks: 'Tracks'
-      about: 'Algorithms'
+      about: 'About project'
       sign_in: 'Sign in'
       sign_up: 'Sign up'
       sign_out: 'Sign out'
