--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -128,6 +128,10 @@ ru:
         completed: "Прошедшие события:"
       desc: "Анализ GPS треков и проведение соревнований в формате GPS Performance."
       goto_event: "На страницу события >>"
+      supported_formats: "Поддерживаемые форматы и приборы:"
+      stats: "Статистика:"
+      stats_tracks: "Загружено треков:"
+      stats_pilots: "Зарегистрировано пилотов:"
     about:
       comp_t: 'Используемые компоненты:'
       comp_lng: 'Используемый фреймворк:'
