--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -141,6 +141,8 @@ ru:
       roadmap: 'Следите за ходом проекта на:'
       trpr: 'Исходный код расчета трека на стороне сервера'
       fepr: 'Подготовка данных на стороне браузера'
+      developer: "Разработка приложения - Александр Кунин"
+      de_translate: "Немецкая локализация выполнена Татьяной Гольм"
   units:
     m: 'м'
     m_html: "'м'"
