--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -1,11 +1,94 @@
 # Additional translations at https://github.com/plataformatec/devise/wiki/I18n
-
 ru:
+  activerecord:
+    attributes:
+      user:
+        current_password: "Текущий пароль"
+        email: "Email"
+        password: "Пароль"
+        password_confirmation: "Подтверждение пароля"
+        remember_me: "Запомнить меня"
+    models:
+      user: "Пользователь"
   devise:
     confirmations:
       confirmed: "Ваша учётная запись подтверждена."
       send_instructions: "В течение нескольких минут Вы получите письмо с инструкциями по подтверждению Вашей учётной записи."
       send_paranoid_instructions: "Если Ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по подтверждению вашей учётной записи."
+      new:
+        resend_confirmation_instructions: "Выслать повторно письмо с активацией"
+    mailer:
+      confirmation_instructions:
+        subject: "Инструкции по подтверждению учётной записи"
+        action: "Активировать"
+        greeting: "Привет %{recipient}!"
+        instruction: "Вы можете активировать свою учетную запись, нажав ссылку снизу:"
+      reset_password_instructions:
+        subject: "Инструкции по восстановлению пароля"
+        action: "Изменить пароль"
+        greeting: "Привет %{recipient}!"
+        instruction: "Вы (или кто-то еще) запросили изменение пароля. Для изменение пароля нажимите ссылку ниже:"
+        instruction_2: "Если вы не запрашивали изменение пароля - проигнорируйте это сообщение"
+        instruction_3: "Ваш пароль не изменится пока вы не нажмете на ссылку и не введете новый."
+      unlock_instructions:
+        subject: "Инструкции по разблокировке учётной записи"
+        action: "Разблокировать учетную запись"
+        greeting: "Привет %{recipient}!"
+        instruction: "Нажмите ссылку для активации учетной записи:"
+        message: "Ваша учетная запись была заблокирована в связи с превышением лимита неудачных попыток входа."
+    passwords:
+      no_token: "Эта страница доступна только при переходе с email для сброса пароля. Если Вы перешли по ссылке из письма, пожалуйста, убедитесь, что Вы использовали полный URL."
+      send_instructions: "В течение нескольких минут Вы получите письмо с инструкциями по восстановлению Вашего пароля."
+      send_paranoid_instructions: "Если Ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению Вашего пароля."
+      updated: "Ваш пароль изменён. Теперь Вы вошли в систему."
+      updated_not_active: "Пароль успешно изменён."
+      edit:
+        change_my_password: "Изменить мой пароль"
+        change_your_password: "Изменить пароль"
+        confirm_new_password: "Повторите новый пароль"
+        new_password: "Новый пароль"
+      new:
+        forgot_your_password: "Забыли пароль?"
+        send_me_reset_password_instructions: "Выслать новый пароль"
+    registrations:
+      destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть Вас."
+      signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
+      signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, Вы не можете войти, потому что Ваша учетная запись не активирована."
+      signed_up_but_locked: "Вы успешно зарегистрировались. Тем не менее, Вы не можете войти, потому что Ваша учетная запись заблокирована."
+      signed_up_but_unconfirmed: "В течение нескольких минут Вы получите письмо с инструкциями по подтверждению Вашей учётной записи."
+      update_needs_confirmation: "Ваш аккаунт успешно обновлен, нонеобходимо подтвердить Ваш новый адрес email. Пожалуйста, проверьте свою электронную почту и нажмите на ссылку \"Подтвердить\", чтобы завершить обновления email."
+      updated: "Ваша учётная запись изменена."
+      edit:
+        are_you_sure: "Вы уверены?"
+        cancel_my_account: "Удалить учетную запись"
+        currently_waiting_confirmation_for_email:
+        leave_blank_if_you_don_t_want_to_change_it: "оставьте поле пустым, если не хотите ничего менять"
+        title: "Редактировать %{resource}"
+        unhappy: ""
+        update: ""
+        we_need_your_current_password_to_confirm_your_changes: "введите текущий пароль для подтверждения изменений"
+      new:
+        sign_up: "Регистрация"
+    sessions:
+      signed_in: "Вход в систему выполнен."
+      signed_out: "Выход из системы выполнен."
+      new:
+        sign_in: "Войти"
+    shared:
+      links:
+        back: "Назад"
+        didn_t_receive_confirmation_instructions: "Не получили подтверждение?"
+        didn_t_receive_unlock_instructions: "Не получили код разблокировки?"
+        forgot_your_password: "Забыли пароль?"
+        sign_in: "Войти"
+        sign_in_with_provider: "Войти с помощью: %{provider}"
+        sign_up: "Регистрация"
+    unlocks:
+      send_instructions: "В течение нескольких минут Вы получите письмо с инструкциями по разблокировке Вашей учётной записи."
+      send_paranoid_instructions: "Если Ваша учётная запись существует, то в течение нескольких минут Вы получите письмо с инструкциями по её разблокировке."
+      unlocked: "Ваша учётная запись разблокирована. Теперь Вы вошли в систему."
+      new:
+        resend_unlock_instructions: "Выслать подтверждение заново"
     failure:
       already_authenticated: "Вы уже вошли в систему."
       inactive: "Ваша учётная запись ещё не активирована."
@@ -16,37 +99,9 @@ ru:
       timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
       unauthenticated: "Вам необходимо войти в систему или зарегистрироваться."
       unconfirmed: "Вы должны подтвердить Вашу учётную запись."
-    mailer:
-      confirmation_instructions:
-        subject: "Инструкции по подтверждению учётной записи"
-      reset_password_instructions:
-        subject: "Инструкции по восстановлению пароля"
-      unlock_instructions:
-        subject: "Инструкции по разблокировке учётной записи"
     omniauth_callbacks:
       failure: "Вы не можете войти в систему с учётной записью из %{kind}, так как \"%{reason}\"."
       success: "Вход в систему выполнен с учётной записью из %{kind}."
-    passwords:
-      no_token: "Эта страница доступна только при переходе с email для сброса пароля. Если Вы перешли по ссылке из письма, пожалуйста, убедитесь, что Вы использовали полный URL."
-      send_instructions: "В течение нескольких минут Вы получите письмо с инструкциями по восстановлению Вашего пароля."
-      send_paranoid_instructions: "Если Ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению Вашего пароля."
-      updated: "Ваш пароль изменён. Теперь Вы вошли в систему."
-      updated_not_active: "Пароль успешно изменён."
-    registrations:
-      destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть Вас."
-      signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
-      signed_up_but_inactive: "Вы успешно зарегистрировались. Тем не менее, Вы не можете войти, потому что Ваша учетная запись не активирована."
-      signed_up_but_locked: "Вы успешно зарегистрировались. Тем не менее, Вы не можете войти, потому что Ваша учетная запись заблокирована."
-      signed_up_but_unconfirmed: "В течение нескольких минут Вы получите письмо с инструкциями по подтверждению Вашей учётной записи."
-      update_needs_confirmation: "Ваш аккаунт успешно обновлен, нонеобходимо подтвердить Ваш новый адрес email. Пожалуйста, проверьте свою электронную почту и нажмите на ссылку \"Подтвердить\", чтобы завершить обновления email."
-      updated: "Ваша учётная запись изменена."
-    sessions:
-      signed_in: "Вход в систему выполнен."
-      signed_out: "Выход из системы выполнен."
-    unlocks:
-      send_instructions: "В течение нескольких минут Вы получите письмо с инструкциями по разблокировке Вашей учётной записи."
-      send_paranoid_instructions: "Если Ваша учётная запись существует, то в течение нескольких минут Вы получите письмо с инструкциями по её разблокировке."
-      unlocked: "Ваша учётная запись разблокирована. Теперь Вы вошли в систему."
   errors:
     messages:
       already_confirmed: "уже подтверждена. Пожалуйста, попробуйте войти в систему"
