--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -77,6 +77,8 @@ ru:
     upload_error:
       header: "Ошибка при чтении файла"
       text: "Пожалуйста, отправьте загружаемый файл по адресу ab@ipkunin.ru, указав каким устройством он был записан. После реализации поддержки данного формата я напишу Вам."
+    edit:
+      visibility: "Видимость:"
   static_pages:
     index:
       title: 'Летай! Соревнуйся! Побеждай!'
@@ -195,3 +197,4 @@ ru:
   general:
     cancel: "Отмена"
     create: "Добавить"
+    save: "Сохранить"
