Добавлены картинки как с этим работать

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -165,6 +165,7 @@ ru:
       fepr: 'Подготовка данных на стороне браузера'
       developer: "Разработка приложения - Александр Кунин"
       de_translate: "Немецкая локализация выполнена Татьяной Гольм"
+      logo_designed_by: "Логотип разработан Юлией Маковеевой"
   units:
     m: 'м'
     m_html: "'м'"
