--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,6 +167,7 @@ en:
       fepr: 'Frontend data processing'
       developer: "App developing - Aleksandr Kunin"
       de_translate: "Deutsch translate by Tatiana Holm"
+      logo_designed_by: "Logo designed by Julia Makoveeva"
   units:
     m: 'm'
     m_html: "'m'"
