--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -96,7 +96,12 @@ ru:
       header: "Ошибка при чтении файла"
       text: "Пожалуйста, отправьте загружаемый файл по адресу ab@ipkunin.ru, указав каким устройством он был записан. После реализации поддержки данного формата я напишу Вам."
     edit:
-      visibility: "Видимость:"
+      visibility: "Параметры доступа:"
+      public: "Открытый"
+      unlisted: "Доступ по ссылке"
+      private: "Ограниченный"
+      elev_chart_html: "'График высот'"
+      elevation_html: "'Высота'"
   static_pages:
     index:
       title: 'Летай! Соревнуйся! Побеждай!'
