--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -175,7 +175,7 @@ en:
       roadmap: "Project's roadmap:"
       trpr: "Track's data processing source code"
       fepr: 'Frontend data processing'
-      developer: "App developing - Aleksandr Kunin"
+      developer: "App developed by Aleksandr Kunin"
       de_translate: "Deutsch translate by Tatiana Holm"
       logo_designed_by: "Logo designed by Julia Makoveeva"
   units:
