--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -173,7 +173,7 @@ ru:
       roadmap: 'Следите за ходом проекта на:'
       trpr: 'Исходный код расчета трека на стороне сервера'
       fepr: 'Подготовка данных на стороне браузера'
-      developer: "Разработка приложения - Александр Кунин"
+      developer: "Приложение разработано Александром Куниным"
       de_translate: "Немецкая локализация выполнена Татьяной Гольм"
       logo_designed_by: "Логотип разработан Юлией Маковеевой"
   units:
