--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -170,7 +170,7 @@ de:
       fepr: 'Aufbereitung der Daten auf der Browser-Seite'
       developer: "Web-Etwickler - Aleksandr Kunin"
       de_translate: "Webseite-Übersetzung ins Deutsche - Tetyana Holm"
-      logo_designed_by: "Logo designed by Julia Makoveeva"
+      logo_designed_by: "Das Logo wurde von Julia Makoweewa entworfen"
   units:
     m: 'm'
     m_html: "'m'"
