--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -56,7 +56,7 @@ ru:
       eldst_h_s_html: "'Высота'"
       spdch_html: "'Вертикальная и горизонтальная скорость'"
       spd_ax_html: "'Скорость'"
-      spd_hs_html: "'Гор. Скорость'"
+      spd_hs_html: "'Путевая скорость'"
       spd_vs_html: "'Верт. Скорость'"
       grch_html: "'Качество полета'"
       gr_s_html: "'Качество'"
@@ -89,6 +89,9 @@ ru:
       edit_range: "Редактирование диапазона"
       range_from: "Диапазон с:"
       range_to: "по:"
+      raw_ground_speed: "'Путевая скорость (Нефильтр.)'"
+      raw_vertical_speed: "'Верт. скорость (Нефильтр.)'"
+      raw_gr: "'Качество (Нефильтр.)'"
     choose:
       title: 'Выберите трек для загрузки'
       number: 'Номер'
