--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,6 +180,7 @@ en:
       fepr: 'Frontend data processing'
       developer: "App developed by Aleksandr Kunin"
       de_translate: "Deutsch translate by Tatiana Holm"
+      es_translate: "Spanish translate by Ekaterina Larina"
       logo_designed_by: "Logo designed by Julia Makoveeva"
   units:
     m: 'm'
