--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -177,7 +177,8 @@ ru:
       trpr: 'Исходный код расчета трека на стороне сервера'
       fepr: 'Подготовка данных на стороне браузера'
       developer: "Приложение разработано Александром Куниным"
-      de_translate: "Немецкая локализация выполнена Татьяной Гольм"
+      de_translate: "Перевод на немецкий выполнен Татьяной Гольм"
+      es_translate: "Перевод на испанский выполнен Екатериной Лариной"
       logo_designed_by: "Логотип разработан Юлией Маковеевой"
   units:
     m: 'м'
